2009-11-16  Antonello Provenzano  <antonello@deveel.com>
	* Cache.cs: moved to namespace Deveel.Data.Caching
	* DataCellCache.cs: moved to namespace Deveel.Data.Caching
	* TransactionSystem.cs: implemented the support for
	confugrable cache systems
	
2009-11-15  Antonello Provenzano  <antonello@deveel.com>
	* SqlType.cs: added member 'Identity'
	* GTSQLTypeInfoDataSource.cs: now checks for the
	AUTO_INCREMENT field (true = SqlType.Identity)
	
2009-11-09  Antonello Provenzano  <antonello@deveel.com>
	* Database.cs: added the statement for creating the view
	INFORMATION_SCHEMA.DATA_TYPES to obtain information
	about the built-in data types
	
2009-11-07  Antonello Provenzano  <antonello@deveel.com>
	* SQLTypes.cs: 
		- renamed to SqlTypes
		- members case normalized to C# naming style
	* DbTypes.cs:
		- renamed to DbType
		- prefix DB_ stripped out
		- members case normalized to C# naming style
	* SelectableScheme.cs: method InternalOrderIndexSet
	now returns IIntegerList
	* ProductInfo.cs: made internal
	
2009-10-31  Antonello Provenzano  <antonello@deveel.com>
	* TransactionSystem.cs: 
		- added property Debug that returns
		a contextual IDebugLogger instance to log debug messages
		for a specific database (suppressed Debug singleton from
		Deveel.Diagnostics to support specific database logging).
		- logic for setting up the debug logger moved to 
		DefaultDebugLogger implementation (though new method Init
		in IDebugLogger).

2009-10-30  Antonello Provenzano  <antonello@deveel.com>
	* IStatementTreeObject.cs: 
		- made internal
		- moved to namespace Deveel.Data.Sql
	* Transaction.cs: 
		- fields INITIALLY_DEFERRED, INITIALLY_IMMEDIATE 
		and NOT_DEFERRABLE moved to the separate enumeration
		ConstraintDeferrability
		- fields for constraint actions moved to separate
		enumeration ConstraintAction
	* TableDataConglometate.cs: columns handling constraint
	actions now store numeric values
	
2009-10-29  Antonello Provenzano  <antonello@deveel.com>